review files before push

--- a/Load/database/load_s3_to_postgres.ipynb
+++ b/Load/database/load_s3_to_postgres.ipynb
@@ -20,16 +20,16 @@
    "metadata": {},
    "source": [
     "<p align=\"center\" style=\"font-size:0.85em; text-decoration: underline;\">\n",
-    "<b>Chargement des variables d’environnement, configuration AWS et Postgres, et téléchargement depuis S3</b>\n",
+    "<b>Chargement des variables d’environnement, configuration AWS et Postgres + téléchargement depuis S3</b>\n",
     "</p>\n",
     "\n",
     "<p style=\"font-size:0.85em;\">\n",
     "Chargement des variables depuis le fichier <code>.env</code> :  \n",
     "\n",
-    "- <b>Clés AWS</b> pour accéder au bucket S3 et télécharger le fichier final (<code>hotels_weather_final_ter.csv</code>).  \n",
-    "- <b>Paramètres Postgres</b> pour préparer la connexion à la base de données.  \n",
+    "- Clés AWS pour accéder au bucket S3 et télécharger le fichier final (<code>hotels_weather_final_ter.csv</code>).  \n",
+    "- Paramètres Postgres pour préparer la connexion à la base de données.  \n",
     "\n",
-    "Le fichier est ensuite récupéré localement via <code>boto3</code> pour être exploité.\n",
+    "Le fichier est ensuite récupéré localement via boto3 pour être exploité.\n",
     "</p>\n",
     " \n"
    ]
@@ -56,7 +56,7 @@
     "\n",
     "# control\n",
     "print(\".env chargé depuis :\", env_path)\n",
-    "print(\"USERNAME =\", os.getenv(\"USERNAME\"))\n"
+    "print(\"USERNAME =\", os.getenv(\"USERNAME\"))"
    ]
   },
   {
@@ -66,12 +66,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# AWS credentials (from .env) \n",
-    "# Keep these values secret\n",
+    "# AWS credentials \n",
     "AWS_ACCESS_KEY_ID = os.getenv('AWS_KEY')\n",
     "AWS_SECRET_ACCESS_KEY = os.getenv('AWS_SECRET_KEY')\n",
     "\n",
-    "#  Postgres connection params (from .env)\n",
+    "#  Postgres connection params \n",
     "DB_USER = os.getenv('USERNAME')\n",
     "DB_PASS = os.getenv('PASSWORD')\n",
     "DB_HOST = os.getenv('HOSTNAME')\n",
@@ -81,7 +80,7 @@
     "#  S3 settings\n",
     "S3_BUCKET = 'flodussartprojectkayak'\n",
     "S3_FILE_KEY = 'projectKayack/src/final_ter.csv'\n",
-    "LOCAL_FILE = 'data/hotels_weather_final_ter.csv'\n"
+    "LOCAL_FILE = 'data/hotels_weather_final_ter.csv'"
    ]
   },
   {
@@ -99,9 +98,8 @@
     }
    ],
    "source": [
-    "# S3 download step\n",
-    "# - Creates a low-level S3 client with explicit credentials and region.\n",
-    "# - Downloads the processed CSV from <bucket>/<key> to LOCAL_FILE on disk.\n",
+    "# S3 download \n",
+    "# Creates a low-level S3 client\n",
     "s3 = boto3.client(\n",
     "    's3',\n",
     "    aws_access_key_id=AWS_ACCESS_KEY_ID,\n",
@@ -320,21 +318,18 @@
     "</p>\n",
     "\n",
     "<p style=\"font-size:0.85em;\">\n",
-    "Cette section importe le fichier <code>hotels_weather_final_ter.csv</code> dans la base PostgreSQL à l’aide de <code>psycopg2</code>.  \n",
-    "Les principales étapes sont :\n",
+    "Importe du fichier <code>hotels_weather_final_ter.csv</code> dans la base PostgreSQL à l’aide de <code>psycopg2</code>.  \n",
+    "Principales étapes :\n",
     "</p>\n",
     "\n",
     "<p style=\"font-size:0.85em;\">\n",
     "\n",
-    "1. Connexion à la base via les identifiants du fichier <code>.env</code>.  \n",
-    "2. Réinitialisation de la table <code>hotels_weather</code> avec <code>TRUNCATE</code>.  \n",
-    "3. Chargement en masse avec <code>COPY FROM STDIN</code> après ouverture du fichier CSV (UTF-8).  \n",
+    "1. Connexion à la base via les identifiants <code>.env</code>\n",
+    "2. Réinitialisation de la table <code>hotels_weather</code> avec <code>TRUNCATE</code>\n",
+    "3. Chargement en masse avec <code>COPY FROM STDIN</code> après ouverture du fichier CSV (UTF-8)\n",
     "4. Validation et fermeture de la connexion.\n",
     "</p>\n",
     "\n",
-    "<p style=\"font-size:0.85em;\">\n",
-    "Cette méthode assure un import rapide et propre des données actualisées dans PostgreSQL.\n",
-    "</p>\n",
     "\n"
    ]
   },
@@ -346,8 +341,6 @@
    "outputs": [],
    "source": [
     "# PostgreSQL connection (psycopg2)\n",
-    "# - Uses env vars for host, port, dbname, user, password.\n",
-    "# - Creates a cursor for subsequent SQL commands.\n",
     "conn = psycopg2.connect(\n",
     "    host=DB_HOST,\n",
     "    port=DB_PORT,\n",
@@ -355,6 +348,7 @@
     "    user=DB_USER,\n",
     "    password=DB_PASS\n",
     ")\n",
+    "# Create a cursor for executing SQL commands\n",
     "cur = conn.cursor()"
    ]
   },
@@ -366,7 +360,6 @@
    "outputs": [],
    "source": [
     "# Reset target table before reloading\n",
-    "# - TRUNCATE removes all rows but keeps the table schema and indexes\n",
     "cur.execute(\"TRUNCATE TABLE hotels_weather;\")\n",
     "conn.commit()"
    ]
@@ -379,9 +372,6 @@
    "outputs": [],
    "source": [
     "# Bulk load data into PostgreSQL\n",
-    "# - Opens the local CSV (utf-8-sig) and skips the header line.\n",
-    "# - COPY FROM STDIN streams rows efficiently into 'hotels_weather'.\n",
-    "# - Column list in COPY must match the CSV column order exactly.\n",
     "with open(LOCAL_FILE, 'r', encoding='utf-8-sig') as f:\n",
     "    next(f)\n",
     "    cur.copy_expert(\"\"\"\n",
@@ -403,7 +393,7 @@
    "outputs": [],
    "source": [
     "# Finalize the load\n",
-    "# Commit the transaction and close cursor/connection cleanly.\n",
+    "# Commit the transaction and close cursor/connection.\n",
     "conn.commit()\n",
     "cur.close()\n",
     "conn.close()"
