--- a/Transform/coordGPS/gest_coord.ipynb
+++ b/Transform/coordGPS/gest_coord.ipynb
@@ -61,17 +61,22 @@
     }
    ],
    "source": [
+    "# Load raw GPS coordinates from JSON file\n",
     "with open(\"../../Extract/coordGPS/coordinates.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    raw_data = json.load(f)\n",
     "\n",
-    "df_coord = pd.DataFrame.from_dict(raw_data, orient='index').reset_index()\n",
-    "df_coord.columns = ['city_name', 'latitude', 'longitude']\n",
+    "# Convert JSON dict to DataFrame (city as index)\n",
+    "df_coord = pd.DataFrame.from_dict(raw_data, orient=\"index\").reset_index()\n",
+    "df_coord.columns = [\"city_name\", \"latitude\", \"longitude\"]\n",
     "\n",
-    "df_coord['city_name'] = df_coord['city_name'].str.replace(\", France\", \"\", regex=False)\n",
+    "# Clean city names\n",
+    "df_coord[\"city_name\"] = df_coord[\"city_name\"].str.replace(\", France\", \"\", regex=False)\n",
     "\n",
+    "# Ensure coordinates are numeric\n",
     "df_coord[\"latitude\"] = df_coord[\"latitude\"].astype(float)\n",
     "df_coord[\"longitude\"] = df_coord[\"longitude\"].astype(float)\n",
     "\n",
+    "# Display result\n",
     "print(df_coord.to_string(index=False))"
    ]
   },
@@ -169,7 +174,7 @@
     "# Map city_id onto df_coord\n",
     "df_coord[\"city_id\"] = df_coord[\"city_name\"].map(city_to_id)\n",
     "\n",
-    "print(df_coord.head())\n"
+    "print(df_coord.head())"
    ]
   },
   {
@@ -227,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "f52eba37",
    "metadata": {},
    "outputs": [
@@ -235,17 +240,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cities missing in df_weather: set()\n"
+      "Villes manquantes dans df_weather: set()\n"
      ]
     }
    ],
    "source": [
+    "# Extract unique city names from both datasets\n",
     "cities_weather = set(df_weather[\"city_name\"].unique())\n",
     "cities_coord = set(df_coord[\"city_name\"].unique())\n",
     "\n",
+    "# Identify cities present in coordinates but missing in weather data\n",
     "missing_in_weather = cities_coord - cities_weather\n",
     "\n",
-    "print(\"Cities missing in df_weather:\", missing_in_weather)\n"
+    "# Report missing cities\n",
+    "print(\"Villes manquantes dans df_weather:\", missing_in_weather)"
    ]
   },
   {
@@ -303,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "912810bd",
    "metadata": {},
    "outputs": [
@@ -311,22 +319,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tous les city_id sont corrects !\n"
+      "Toutes les valeurs de city_id sont correctes.\n"
      ]
     }
    ],
    "source": [
+    "# Build city_name -> city_id reference mapping\n",
     "city_id_mapping = dict(zip(df_weather[\"city_name\"], df_weather[\"city_id\"]))\n",
     "\n",
+    "# Infer expected city_id for each coordinate entry\n",
     "df_coord[\"city_id_expected\"] = df_coord[\"city_name\"].map(city_id_mapping)\n",
     "\n",
+    "# Detect mismatches between actual and expected city_id\n",
     "mismatch = df_coord[df_coord[\"city_id\"] != df_coord[\"city_id_expected\"]]\n",
     "\n",
+    "# Report validation result\n",
     "if mismatch.empty:\n",
-    "    print(\"Tous les city_id sont corrects !\")\n",
+    "    print(\"Toutes les valeurs de city_id sont correctes.\")\n",
     "else:\n",
     "    print(\"Des erreurs dans les city_id :\")\n",
-    "    print(mismatch)\n"
+    "    print(mismatch)"
    ]
   },
   {
@@ -404,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "jedha_eda",
    "language": "python",
    "name": "python3"
   },
@@ -418,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
