--- a/Transform/coordGPS/verif_coord.ipynb
+++ b/Transform/coordGPS/verif_coord.ipynb
@@ -108,12 +108,12 @@
     "    for city, data in raw_data.items()\n",
     "])\n",
     "\n",
-    "df_coords.head()\n"
+    "df_coords.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "fffda4c7",
    "metadata": {},
    "outputs": [
@@ -1151,10 +1151,11 @@
     "\n",
     "def clean_city_name(name: str) -> str:\n",
     "    \"\"\"\n",
-    "    Clean a city name for display:\n",
-    "    - Removes trailing \", France\"\n",
-    "    - Collapses extra spaces\n",
-    "    - Keeps capitalization\n",
+    "    Normalize a city name for display purposes.\n",
+    "\n",
+    "    - Removes trailing country suffix (\", France\")\n",
+    "    - Normalizes whitespace\n",
+    "    - Preserves original capitalization\n",
     "    \"\"\"\n",
     "    name = re.sub(r\",?\\s*France$\", \"\", name, flags=re.I)\n",
     "    name = re.sub(r\"\\s+\", \" \", name).strip()\n",
@@ -1163,7 +1164,7 @@
     "\n",
     "# Cleaning \n",
     "\n",
-    "# Create a clean label for display (remove \", France\" and extra spaces)\n",
+    "# Create a clean label for display \n",
     "df_coords[\"city_clean\"] = df_coords[\"city\"].apply(clean_city_name)\n",
     "\n",
     "# Label only for important cities (display purpose)\n",
@@ -1208,7 +1209,7 @@
     "    margin={\"r\": 0, \"t\": 50, \"l\": 0, \"b\": 0},\n",
     ")\n",
     "\n",
-    "fig.show()\n"
+    "fig.show()"
    ]
   }
  ],
