--- a/Transform/final_csv.ipynb
+++ b/Transform/final_csv.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "273cd1a9",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
     "                    [\"city_id\", \"city_name_1\", \"city_name_2\", \"city_name_3\"]]\n",
     "\n",
     "print(f\"Nombre de mismatches : {len(errors)}\")\n",
-    "display(errors.head(10)) \n"
+    "display(errors.head(10)) "
    ]
   },
   {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a1b354f2",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
     "df_hotels = df_hotels.merge(df_coord_clean, on=\"city_id\", how=\"left\")\n",
     "\n",
     "# Check: display unique city_id/city_name pairs after the merge\n",
-    "print(df_hotels[[\"city_id\", \"city_name\"]].drop_duplicates())\n"
+    "print(df_hotels[[\"city_id\", \"city_name\"]].drop_duplicates())"
    ]
   },
   {
@@ -490,7 +490,7 @@
     "\n",
     "# eload and preview the combined dataset\n",
     "df = pd.read_csv(\"data/hotels_weather_combined.csv\")\n",
-    "display(df.head())\n"
+    "display(df.head())"
    ]
   },
   {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "903d1174",
    "metadata": {},
    "outputs": [],
@@ -557,12 +557,12 @@
     "    'clouds',\n",
     "    'pop',\n",
     "    'good_weather_score'\n",
-    "]\n"
+    "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "40498b28",
    "metadata": {},
    "outputs": [],
@@ -576,7 +576,7 @@
     "    'longitude_x': 'hotel_longitude',\n",
     "    'latitude_y': 'city_latitude',\n",
     "    'longitude_y': 'city_longitude'\n",
-    "})\n"
+    "})"
    ]
   },
   {
@@ -773,12 +773,12 @@
     "    .head(5)                                        # select top 5\n",
     ")\n",
     "\n",
-    "display(top_destinations)\n"
+    "display(top_destinations)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "41c31b8b",
    "metadata": {},
    "outputs": [
@@ -1034,7 +1034,7 @@
     ")\n",
     "\n",
     "# Display the top 20 hotels\n",
-    "display(top_hotels)\n"
+    "display(top_hotels)"
    ]
   },
   {
