--- a/Transform/hotels/cleaning_hotels_description.ipynb
+++ b/Transform/hotels/cleaning_hotels_description.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f62e5129",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b05efa0b",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "4           48.8681307,2.3586776  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "fc15e79e",
    "metadata": {},
    "outputs": [],
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "43ac75c6",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cb11515e",
    "metadata": {},
    "outputs": [
@@ -191,14 +191,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of hotels without rating: 18\n"
+      "Nombre d'hôtels sans note: 18\n"
      ]
     }
    ],
    "source": [
     "# Check for missing ratings\n",
     "missing_ratings = df_hotels[\"hotel_rating\"].isnull().sum()\n",
-    "print(f\"Number of hotels without rating: {missing_ratings}\")"
+    "print(f\"Nombre d'hôtels sans note: {missing_ratings}\")"
    ]
   },
   {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1edd7a07",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bde081a6",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0b2c9d58",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hotel city names corrected:\n",
+      "Noms des villes des hôtels corrigées:\n",
       "['Aigues-Mortes', 'Aix-en-Provence', 'Amiens', 'Annecy', 'Ariège', 'Avignon', 'Bayeux', 'Bayonne', 'Besançon', 'Biarritz', 'Bormes-les-Mimosas', 'Carcassonne', 'Cassis', 'Château du Haut-Koenigsbourg', 'Collioure', 'Colmar', 'Dijon', 'Eguisheim', 'Gorges du Verdon', 'Grenoble', 'La Rochelle', 'Le Havre', 'Le Mont-Saint-Michel', 'Lille', 'Lyon', 'Marseille', 'Montauban', 'Nimes', 'Paris', 'Rouen', 'Saint-Malo', 'Sainte-Marie de la Mer', 'Strasbourg', 'Toulouse', 'Uzes']\n"
      ]
     }
@@ -525,7 +525,7 @@
     "df_hotels['city_name'] = df_hotels['city_name'].str.strip()\n",
     "\n",
     "# Verify final list of unique city names\n",
-    "print(\"Hotel city names corrected:\")\n",
+    "print(\"Noms des villes des hôtels corrigées:\")\n",
     "print(sorted(df_hotels['city_name'].unique()))"
    ]
   },
@@ -549,7 +549,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weather city names corrected:\n",
+      "Noms des villes du dataset météo corrigées:\n",
       "['Aigues-Mortes', 'Aix-en-Provence', 'Amiens', 'Annecy', 'Ariège', 'Avignon', 'Bayeux', 'Bayonne', 'Besançon', 'Biarritz', 'Bormes-les-Mimosas', 'Carcassonne', 'Cassis', 'Château du Haut-Koenigsbourg', 'Collioure', 'Colmar', 'Dijon', 'Eguisheim', 'Gorges du Verdon', 'Grenoble', 'La Rochelle', 'Le Havre', 'Le Mont-Saint-Michel', 'Lille', 'Lyon', 'Marseille', 'Montauban', 'Nimes', 'Paris', 'Rouen', 'Saint-Malo', 'Sainte-Marie de la Mer', 'Strasbourg', 'Toulouse', 'Uzes']\n"
      ]
     }
@@ -560,7 +560,7 @@
     "df_weather['city'] = df_weather['city'].str.replace(', France', '', regex=False).str.strip()\n",
     "\n",
     "# Check the final cleaned list of city names in the weather dataset\n",
-    "print(\"Weather city names corrected:\")\n",
+    "print(\"Noms des villes du dataset météo corrigées:\")\n",
     "print(sorted(df_weather['city'].unique()))"
    ]
   },
@@ -587,9 +587,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cities in hotels not in weather:\n",
+      "Villes présentes dans le dataset hôtels mais absentes du dataset météo:\n",
       "[]\n",
-      "Cities in weather not in hotels:\n",
+      "Villes présentes dans le dataset météo mais absentes du dataset hôtels:\n",
       "[]\n"
      ]
     }
@@ -597,11 +597,11 @@
    "source": [
     "# Find unmatched cities \n",
     "# Cities present in hotels dataset but missing in weather dataset\n",
-    "print(\"Cities in hotels not in weather:\")\n",
+    "print(\"Villes présentes dans le dataset hôtels mais absentes du dataset météo:\")\n",
     "print(sorted(cities_hotels - cities_weather))\n",
     "\n",
     "# Cities present in weather dataset but missing in hotels dataset\n",
-    "print(\"Cities in weather not in hotels:\")\n",
+    "print(\"Villes présentes dans le dataset météo mais absentes du dataset hôtels:\")\n",
     "print(sorted(cities_weather - cities_hotels))"
    ]
   },
@@ -835,7 +835,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full duplicates found: 0\n"
+      "Nombre de doublons complets trouvés: 0\n"
      ]
     },
     {
@@ -887,8 +887,8 @@
    "source": [
     "# Check full duplicates across all columns\n",
     "duplicates_full = df_hotels[df_hotels.duplicated()]\n",
-    "print(f\"Full duplicates found: {len(duplicates_full)}\")\n",
-    "display(duplicates_full)\n"
+    "print(f\"Nombre de doublons complets trouvés: {len(duplicates_full)}\")\n",
+    "display(duplicates_full)"
    ]
   },
   {
@@ -901,7 +901,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Duplicates based on hotel name and city found: 0\n"
+      "Nombre de doublons basés sur le nom d'hôtel et la ville: 0\n"
      ]
     },
     {
@@ -953,8 +953,8 @@
    "source": [
     "# Check duplicates based on hotel_name and city_name\n",
     "duplicates_hotels = df_hotels[df_hotels.duplicated(subset=['hotel_name', 'city_name'])]\n",
-    "print(f\"Duplicates based on hotel name and city found: {len(duplicates_hotels)}\")\n",
-    "display(duplicates_hotels)\n"
+    "print(f\"Nombre de doublons basés sur le nom d'hôtel et la ville: {len(duplicates_hotels)}\")\n",
+    "display(duplicates_hotels)"
    ]
   },
   {
@@ -978,7 +978,7 @@
     "# Remove hidden special characters (newline \\n, tab \\t, carriage return \\r)\n",
     "df_hotels['hotel_name'] = df_hotels['hotel_name'].apply(\n",
     "    lambda x: re.sub(r'[\\n\\t\\r]', ' ', x)   # replace with a space\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -999,7 +999,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of hotels with short descriptions (<50 chars): 0\n"
+      "Nombre d'hôtels avec une description très courte (<50 caractères): 0\n"
      ]
     },
     {
@@ -1049,8 +1049,8 @@
     "\n",
     "# Select hotels with very short descriptions (< 50 characters)\n",
     "short_descriptions = df_hotels[df_hotels['description_length'] < 50]\n",
-    "print(f\"Number of hotels with short descriptions (<50 chars): {len(short_descriptions)}\")\n",
-    "display(short_descriptions[['hotel_name', 'hotel_description', 'description_length']])\n"
+    "print(f\"Nombre d'hôtels avec une description très courte (<50 caractères): {len(short_descriptions)}\")\n",
+    "display(short_descriptions[['hotel_name', 'hotel_description', 'description_length']])"
    ]
   },
   {
@@ -1063,7 +1063,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of missing descriptions: 1\n"
+      "Nombre de descriptions manquantes: 1\n"
      ]
     },
     {
@@ -1119,8 +1119,8 @@
     "# Find hotels with missing descriptions (NaN values)\n",
     "missing_descriptions = df_hotels[df_hotels['hotel_description'].isna()]\n",
     "\n",
-    "print(f\"Number of missing descriptions: {len(missing_descriptions)}\")\n",
-    "display(missing_descriptions[['city_name', 'hotel_name', 'hotel_url']])\n"
+    "print(f\"Nombre de descriptions manquantes: {len(missing_descriptions)}\")\n",
+    "display(missing_descriptions[['city_name', 'hotel_name', 'hotel_url']])"
    ]
   },
   {
@@ -1215,15 +1215,15 @@
    "source": [
     "# Define the list of columns to keep for the final dataset\n",
     "columns_to_keep = [\n",
-    "    'hotel_id',          # Unique identifier for each hotel\n",
-    "    'hotel_name',        # Cleaned hotel name\n",
-    "    'hotel_url',         # URL of the hotel page\n",
-    "    'hotel_rating',      # Numeric rating of the hotel\n",
-    "    'hotel_description', # Cleaned description text\n",
-    "    'latitude',          # Latitude coordinate\n",
-    "    'longitude',         # Longitude coordinate\n",
-    "    'city_id',           # Unique identifier for the city\n",
-    "    'city_name'          # Original (corrected) city name\n",
+    "    'hotel_id',          \n",
+    "    'hotel_name',        \n",
+    "    'hotel_url',         \n",
+    "    'hotel_rating',      \n",
+    "    'hotel_description', \n",
+    "    'latitude',          \n",
+    "    'longitude',         \n",
+    "    'city_id',           \n",
+    "    'city_name'         \n",
     "]"
    ]
   },
@@ -1247,8 +1247,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remaining hotels after cleaning: 857\n",
-      "Number of hotels per city: city_name\n",
+      "Nombre d'hôtels restants après nettoyage: 857\n",
+      "Nombre d'hôtels par ville: city_name\n",
       "Aigues-Mortes                   25\n",
       "Colmar                          25\n",
       "Toulouse                        25\n",
@@ -1294,8 +1294,8 @@
     "hotels_per_city = df_hotels_cleaned[\"city_name\"].value_counts()\n",
     "\n",
     "# Check how many hotels remain\n",
-    "print(f\"Remaining hotels after cleaning: {len(df_hotels_cleaned)}\")\n",
-    "print(f\"Number of hotels per city: {hotels_per_city}\")\n"
+    "print(f\"Nombre d'hôtels restants après nettoyage: {len(df_hotels_cleaned)}\")\n",
+    "print(f\"Nombre d'hôtels par ville: {hotels_per_city}\")"
    ]
   },
   {
@@ -1310,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "6a06639d",
    "metadata": {},
    "outputs": [
@@ -1318,7 +1318,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cities with less than 25 hotels: city_name\n",
+      "Villes avec moins de 25 hôtels: city_name\n",
       "Bormes-les-Mimosas              24\n",
       "Dijon                           24\n",
       "La Rochelle                     24\n",
@@ -1336,12 +1336,12 @@
    "source": [
     "# Filter only cities with less than 25 hotels\n",
     "few_hotels = hotels_per_city[hotels_per_city < 25]\n",
-    "print(f\"Cities with less than 25 hotels: {few_hotels}\")\n"
+    "print(f\"Villes avec moins de 25 hôtels: {few_hotels}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "7be5a5c4",
    "metadata": {},
    "outputs": [
@@ -1397,7 +1397,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "jedha_eda",
    "language": "python",
    "name": "python3"
   },
@@ -1411,7 +1411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
