--- a/Extract/hotels/sample/sample.ipynb
+++ b/Extract/hotels/sample/sample.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample created: hotels_descriptions_sample.json\n"
+      "Sample créé: hotels_descriptions_sample.json\n"
      ]
     }
    ],
@@ -18,6 +18,7 @@
     "import json\n",
     "import os\n",
     "\n",
+    "# Paths\n",
     "INPUT_FILE = os.path.join(\"..\", \"data\", \"hotels_descriptions.json\")\n",
     "OUTPUT_FILE = \"hotels_descriptions_sample.json\"\n",
     "\n",
@@ -25,19 +26,18 @@
     "with open(INPUT_FILE, \"r\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
+    "# Save a sample of the first 5 entries\n",
     "sample_data = data[:5]\n",
-    "\n",
-    "# Save as sample JSON\n",
     "with open(OUTPUT_FILE, \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(sample_data, f, indent=4, ensure_ascii=False)\n",
     "\n",
-    "print(f\"Sample created: {OUTPUT_FILE}\")\n"
+    "print(f\"Sample créé: {OUTPUT_FILE}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "jedha_eda",
    "language": "python",
    "name": "python3"
   },
@@ -51,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
