--- a/Transform/hotels/anal_rating.ipynb
+++ b/Transform/hotels/anal_rating.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "f996b114",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "2fe244e8",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "3bce48aa",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of NULL values per column:\n",
+      "Nombre de NULL par colonne:\n",
       "location        0\n",
       "name            0\n",
       "rating         18\n",
@@ -82,7 +82,7 @@
       "coordinates     0\n",
       "dtype: int64\n",
       "\n",
-      "Rows containing at least one NULL value:\n",
+      "Lignes contenant au moins une valeur NULL:\n",
       "                         location  \\\n",
       "4                           Paris   \n",
       "33                          Dijon   \n",
@@ -193,17 +193,17 @@
    "source": [
     "# Check for missing values in the dataset\n",
     "# Count the number of NULL values per column\n",
-    "print(\"Number of NULL values per column:\")\n",
+    "print(\"Nombre de NULL par colonne:\")\n",
     "print(df_hotels.isnull().sum())\n",
     "\n",
     "# Display rows that contain at least one NULL value\n",
-    "print(\"\\nRows containing at least one NULL value:\")\n",
+    "print(\"\\nLignes contenant au moins une valeur NULL:\")\n",
     "print(df_hotels[df_hotels.isnull().any(axis=1)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "164a7eed",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hotels without rating:\n",
+      "Hôtels sans note:\n",
       "                         location  \\\n",
       "4                           Paris   \n",
       "33                          Dijon   \n",
@@ -317,13 +317,13 @@
    "source": [
     "# Inspect hotels with missing ratings \n",
     "# Filter the DataFrame to show only rows where 'rating' is NaN\n",
-    "print(\"Hotels without rating:\")\n",
+    "print(\"Hôtels sans note:\")\n",
     "print(df_hotels[df_hotels[\"rating\"].isna()])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "bf4104cf",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
     "plt.ylabel(\"Nombre de rating manquants\", fontsize=12)\n",
     "plt.xticks(rotation=45, ha=\"right\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "93e02f44",
    "metadata": {},
    "outputs": [
@@ -733,13 +733,13 @@
     "    .reset_index(drop=True)\n",
     ")\n",
     "\n",
-    "best_hotel_per_city\n"
+    "best_hotel_per_city"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "jedha_eda",
    "language": "python",
    "name": "python3"
   },
@@ -753,7 +753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
