--- a/Visualisations/cartes.ipynb
+++ b/Visualisations/cartes.ipynb
@@ -21,18 +21,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find and load environment variables from .env file\n",
+    "# Configure environment variables\n",
     "env_path = find_dotenv()\n",
     "load_dotenv(dotenv_path=env_path, override=True)\n",
     "\n",
-    "# Load AWS credentials from environment variables\n",
     "AWS_ACCESS_KEY_ID = os.getenv('AWS_KEY')\n",
     "AWS_SECRET_ACCESS_KEY = os.getenv('AWS_SECRET_KEY')\n",
-    "\n",
-    "# Define S3 parameters\n",
     "S3_BUCKET = 'flodussartprojectkayak'                   \n",
     "S3_FILE_KEY = 'projectKayack/src/final_ter.csv'           \n",
-    "LOCAL_FILE = 'data/hotels_weather_final_ter.csv'               \n"
+    "LOCAL_FILE = 'data/hotels_weather_final_ter.csv'               "
    ]
   },
   {
