--- a/Visualisations/sample/sample.ipynb
+++ b/Visualisations/sample/sample.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample created: hotels_weather_final_ter_sample.csv\n"
+      "Sample créé: hotels_weather_final_ter_sample.csv\n"
      ]
     }
    ],
@@ -18,28 +18,24 @@
     "import pandas as pd\n",
     "import os\n",
     "\n",
-    "# Input CSV file path\n",
+    "# Paths\n",
     "INPUT_FILE = os.path.join(\"..\", \"data\", \"hotels_weather_final_ter.csv\")\n",
-    "\n",
-    "# Output CSV file path\n",
     "OUTPUT_FILE = \"hotels_weather_final_ter_sample.csv\"\n",
     "\n",
     "# Read the original CSV file\n",
     "df = pd.read_csv(INPUT_FILE)\n",
     "\n",
-    "# Get the first 5 rows as a sample\n",
+    "# Save a sample of the first 5 rows\n",
     "df_sample = df.head(5)\n",
-    "\n",
-    "# Save the sample to a new CSV file\n",
     "df_sample.to_csv(OUTPUT_FILE, index=False, encoding=\"utf-8\")\n",
     "\n",
-    "print(f\"Sample created: {OUTPUT_FILE}\")\n"
+    "print(f\"Sample créé: {OUTPUT_FILE}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "jedha_eda",
    "language": "python",
    "name": "python3"
   },
@@ -53,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
